<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:fillViewport="true"
    android:background="@drawable/gradient_bg"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/aboutus_header"
            android:textSize="12sp"
            android:textStyle="bold"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/aboutus_body"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/aboutus_body2"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Our Belief"
            android:textSize="12sp"
            android:textStyle="bold"
            android:inputType="textMultiLine"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/aboutus_ourbelief"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Our Mission"
            android:textSize="12sp"
            android:textStyle="bold"
            android:inputType="textMultiLine"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/aboutus_ourmission"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/aboutus_ourmission2"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Company Profile"
            android:textSize="12sp"
            android:textStyle="bold"
            android:inputType="textMultiLine"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/aboutus_companyprofile"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/aboutus_companyprofile2"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


</ScrollView>